# melon

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
dbg/: dbg_system.rs  main.rs
examples/: debugger.rs  dumb_debugger.rs
src/: consts.rs  debugger.rs  instruction.rs  lib.rs  program.rs  shell.rs  system.rs  typedef.rs  vm.rs
tests/: simple_text_shell.rs  text_shell.rs
