[package]
name = "melon"
version = "0.15.0"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A library for creating retro computing platforms"
repository = "https://github.com/bakervm/melon"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
failure = "0.1.5"
serde = "1.0.100"
serde_derive = "1.0.100"
rand = "0.7.0"
rmp-serde = "0.14.0"
flate2 = "1.0.11"
structopt = "0.3.1"
rustyline = "5.0.2"
colored = "1.8.0"
semver = { version = "0.9.0", features = ["serde"] }
lazy_static = "1.4.0"
bytesize = "1.0.0"

[dev-dependencies]
tempfile = "3.1.0"
