[package]
name = "melon"
version = "0.15.0"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A library for creating retro computing platforms"
repository = "https://github.com/bakervm/melon"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
failure = "0.1.7"
serde = "1.0.104"
serde_derive = "1.0.104"
rand = "0.7.3"
rmp-serde = "0.14.3"
flate2 = "1.0.13"
structopt = "0.3.11"
rustyline = "6.0.0"
colored = "1.9.3"
semver = { version = "0.9.0", features = ["serde"] }
lazy_static = "1.4.0"
bytesize = "1.0.0"
rand_derive = "0.5.0"

[dev-dependencies]
tempfile = "3.1.0"
